# AlgoForge

./: .gitignore  AGENTS.md  README.md  check_running_jobs.bat  pyproject.toml  pytest.ini  requirements.txt  restart_server.bat  start_api_server.bat  start_api_server.sh  start_server.bat  stop_server.bat  test_run_execution.py
apps/: __init__.py
db/: ac_leverage.csv  apply_indicators_migration.py  apply_migration.py  apply_migration_008.py  apply_migration_009.py  schema.sql
deploy/: QUICK_START.md  README.md  algoforge-api.service  algoforge-web.service  backup-algoforge.sh  deploy.sh  env.example  nginx-algoforge.conf
docs/: ATR_Stop_Loss_Implementation_Summary.md  Add_Trade_Entry_Value_Display.md  AlgoForge_ADR_v1.0.md  AlgoForge_AI_Implementation_Prompt.md  AlgoForge_Implementation_Guide_v1.0.md  AlgoForge_PRD_v1.0.md  AlgoForge_Strategy_Builder_Implementation_Guide_v1.0.md  AlgoForge_TRD_v1.0.md  CHANGELOG_Multi_Output_Indicators.md  Custom_Indicators_Complete_Guide.md  Debug_Multi_Output_Indicator_Issue.md  Display_Position_Size_As_Integer.md  Fix_API_Response_Structure_Issue.md  Fix_Balance_At_Entry_API_Response.md  Fix_Chart_Data_Multi_Output_Indicator.md  Fix_Custom_Indicator_Code_Bug.md  Fix_Indicator_Code_Display_Issue.md  Fix_Indicator_Library_Output_Fields_Display.md  Fix_Indicator_Loading_State_Issue.md  Fix_Multi_Output_Indicator_Display.md  Fix_Position_Size_And_Risk_Limit.md  Fix_Strategy_Builder_Indicator_Loading_Issue.md  Improve_Trade_Display_Features.md  Indicator_Edit_Parameters_Feature.md  Indicator_Management_System_Implementation_Summary.md  (+12 more)
(+220 files in other folders)
